# zebflow

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  context7.json  dev.sh  fly.toml  install.sh  railway.json  render.yaml
.github/workflows/: desktop-release.yml  docker-build.yml  release.yml
charts/zebflow/: Chart.yaml  values.yaml
charts/zebflow/templates/: ingress.yaml  secret.yaml  service.yaml  statefulset.yaml
composites/openai-embedding/: definition.json
composites/openai-embedding/functions/: embed.zf.json
composites/telegram/: definition.json
composites/telegram/functions/: delete-webhook.zf.json  edit-message.zf.json  register-webhook.zf.json  send-document.zf.json  send-message.zf.json  send-photo.zf.json  transform-update.zf.json
composites/tg-send/: node.json  pipeline.zf.json
composites/tg-send-document/: node.json  pipeline.zf.json
composites/tg-send-photo/: node.json  pipeline.zf.json
docker/: Dockerfile  docker-compose.postgres.yml  docker-compose.yml
docs/: ARCHITECTURE.md  ARCHITECTURE.obsolete.v1.md  DISTRIBUTED_ARCHITECTURE.md  OFFICE_FEDERATION_MODEL.md  README.md
docs/dev-guide/: README.md  architecture.md  milestone-0.2.1.md  node-development-formal-guide.md  office-federation-contract.md  office-federation-model.md  project-contract.md
docs/dev-guide/architecture/: platform-data-structure.md  platform-executable.md  platform-schema-fixation-todo.md  project-distribution.md
docs/examples/: README.md
docs/unused/: ARCHITECTURE.obsolete.v1.md  OVERVIEW.md  PLATFORM_WEB.md  README.md  RWE.md
docs/unused/conventions/pipelines/: common_backend.zf.json  static_entry_generation.zf.json
docs/user-guide/: DSL-formal-guide.md  README.md  marketplace-formal-guide.md  template-formal-guide.md
k8s/examples/controller-two-offices/: README.md  controller.yaml  debian-test.yaml  namespace.yaml  office-a.yaml  office-b.yaml  secret.yaml
k8s/production/: README.md
k8s/production/federated-join/: README.md  namespace.yaml  office.yaml  zebflow-office-secrets.example.yaml
k8s/production/managed-cluster/: README.md
k8s/production/managed-cluster/multi-office/: README.md  zebflow-cluster-secrets.example.yaml  zebflow-live-controller.yaml  zebflow-main-service.yaml  zebflow-managed-auto-update.yaml  zebflow-office-1.yaml
k8s/production/managed-cluster/single/: README.md  auto-update.yaml  browserless.yaml  (+4 more)
libraries/: README.md
libraries/zeb/codemirror/: manifest.json
libraries/zeb/d3/: README.md  manifest.json
libraries/zeb/deckgl/: README.md  manifest.json
libraries/zeb/graphui/: manifest.json
libraries/zeb/icons/: manifest.json
libraries/zeb/livegeo/: manifest.json
libraries/zeb/markdown/: manifest.json
libraries/zeb/pdf/: manifest.json
libraries/zeb/prosemirror/: README.md  manifest.json
libraries/zeb/threejs/: manifest.json
libraries/zeb/threejs-vrm/: README.md  manifest.json
libraries/zeb/use/: manifest.json
npm/: README.md  install.js  package.json  run.js
pip/: README.md  pyproject.toml
pip/zebflow/: __init__.py  __main__.py
skills/zebflow/references/: dsl-reference.md  hooks-reference.md  template-guide.md
src/: lib.rs  version.rs
src/automaton/: mod.rs
src/automaton/agents/: contract.rs  mod.rs  tool_caller.rs  zebtune.rs
src/automaton/infra/: assistant_config.rs  http_client.rs  interface.rs  llm.rs  llm_interface.rs  mod.rs  model.rs  registry.rs  repl.rs  shell_tools.rs
src/automaton/intelligence/: mod.rs
src/automaton/memory/: mod.rs
src/automaton/planning/: mod.rs
src/infra/: health.rs  mod.rs
src/infra/cluster/: mod.rs
src/infra/execution/: mod.rs
src/infra/io/: mod.rs
src/infra/mem/: mod.rs  subscriber.rs
src/infra/scheduler/: mod.rs
src/infra/storage/: mod.rs
src/infra/ws_client/: mod.rs
src/language/: model.rs
src/language/runtime/: tool_init.js
src/mapserver/: mod.rs
src/mapserver/infra/: bbox.rs  geojson_stream.rs  http.rs  mod.rs  simplify.rs
src/mapserver/publish/: build.rs  manifest.rs  mod.rs  registry.rs
src/mapserver/resolve/: artifact.rs  cache.rs  filter_dsl.rs  function_cache.rs  geoparquet.rs  geoparquet_direct.rs  geoparquet_optimize.rs  mod.rs  mvt.rs  query.rs  stats.rs  style.rs  style_dsl.rs  tile.rs  tile_cache.rs
src/pipeline/: interface.rs  layout.rs  mod.rs  model.rs  security.rs
src/pipeline/engines/: basic.rs  mod.rs  noop.rs
src/pipeline/expr/: mod.rs  resolver.rs  scanner.rs
src/pipeline/nodes/: interface.rs  mod.rs
src/pipeline/prototypes/: mod.rs  visual.rs
src/platform/: MILESTONE.md  mod.rs  model.rs  operations.rs  sekejap.rs
src/platform/catalog/: mod.rs
src/platform/db/: driver.rs  registry.rs
src/platform/help/: mod.rs
src/platform/interaction/: patterns.rs
src/platform/mcp/: handler.rs
src/platform/services/: assistant_config.rs  assistant_tools.rs  authorization.rs  credential.rs  db_connection.rs  db_runtime.rs  hub.rs  library.rs  marketplace.rs  mcp_session.rs  mod.rs  node_registry.rs  ops.rs  pipeline_runtime.rs  platform.rs  project.rs  project_config.rs  project_operation.rs  project_transfer.rs  simple_table.rs  tsx_outline.rs  user.rs  zeb_lock.rs
src/platform/shell/: executor.rs  mod.rs  parser.rs
src/platform/skills/: agent-core.md  full-project-workflow.md  help-pipeline.md  mod.rs  pipeline-dsl-web-auto.md  pipeline-dsl-web.md  pipeline-dsl.md  pipeline-nodes.md  rwe-templates.md  sekejapql.md  web-tailwind.md  web-templates.md  web-zeb-hooks.md
src/platform/web/: embedded.rs  mod.rs
src/provision/: k8s.rs  mod.rs
src/rwe/: BLESSED_LIBS.md  SPECIFICATION.md  axum_demo.rs  formal-mechanism.md  mod.rs  model.rs  spec-alignment-todo.md
src/rwe/bench-fixtures/: compile_compare.tsx
src/rwe/core/: compiler.rs  deno_worker.rs  js_masker.rs  mod.rs  model.rs  render.rs  security.rs
src/rwe/engines/: rwe.rs
src/rwe/processors/: mod.rs
src/rwe/runtime/: preact_ssr_init.js  rwe.ts
src/zebfs/: acl.rs  error.rs  local.rs  mod.rs  model.rs
tests/language/: deno_sandbox.rs
tests/platform/: smoke.rs
tests/rwe/: template_render.rs
(+555 files in other folders)
