[package]
name = "zebflow"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
pulldown-cmark = "0.12"
sekejap = "0.5.3"
swc_common = "19.0.0"
swc_ecma_ast = "21.0.0"
swc_ecma_parser = "35.0.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
futures = "0.3"
async-stream = "0.3"
arc-swap = "1"
ureq = { version = "2", features = ["json"] }
dotenvy = "0.15"
rmcp = { version = "0.17.0", features = ["server", "transport-io", "transport-streamable-http-server", "schemars"] }
tokio-util = "0.7.18"
rand = "0.10.0"
hex = "0.4.3"
tower = { version = "0.5", features = ["util"] }
oxc_allocator = "0.116.0"
oxc_ast = "0.116.0"
oxc_ast_visit = "0.116.0"
oxc_parser = "0.116.0"
oxc_span = "0.116.0"
oxc_codegen = "0.116.0"
oxc_semantic = "0.116.0"
oxc_transformer = "0.116.0"
deno_core = "0.390.0"
deno_error = "0.7.0"
base64 = "0.22"
infer = "0.16"
multer = "3"
serde_urlencoded = "0.7"
sha2 = "0.10"
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk"] }
dirs-next = "2"
jsonwebtoken = "9"
bcrypt = "0.15"
argon2 = { version = "0.5", features = ["std"] }
hmac = "0.12"
tokio-cron-scheduler = "0.15.1"
chrono = { version = "0.4.44", features = ["serde", "clock"] }
uuid = { version = "1.22.0", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
