[package]
name = "zebflow"
version = "0.7.2"
edition = "2024"
description = "Reactive web automation platform — pipelines, templates, and real-time collaboration in a single binary."
license = "MIT"
repository = "https://github.com/zebflow/zebflow"
homepage = "https://zebflow.com"
keywords = ["pipeline", "automation", "reactive", "web", "server"]
categories = ["web-programming::http-server", "command-line-utilities"]

[package.metadata.binstall]
pkg-url = "https://github.com/zebflow/zebflow/releases/download/v{ version }/zebflow-{ target }{ archive-suffix }"
bin-dir = "zebflow{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "https://github.com/zebflow/zebflow/releases/download/v{ version }/zebflow-linux-amd64.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "https://github.com/zebflow/zebflow/releases/download/v{ version }/zebflow-linux-arm64.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "https://github.com/zebflow/zebflow/releases/download/v{ version }/zebflow-darwin-arm64.tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "https://github.com/zebflow/zebflow/releases/download/v{ version }/zebflow-windows-amd64.zip"
pkg-fmt = "zip"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
pulldown-cmark = "0.12"
swc_common = "19.0.0"
swc_ecma_ast = "21.0.0"
swc_ecma_parser = "35.0.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
futures = "0.3"
async-stream = "0.3"
arc-swap = "1"
ureq = { version = "2", features = ["json"] }
dotenvy = "0.15"
rmcp = { version = "0.17.0", features = ["server", "transport-io", "transport-streamable-http-server", "schemars"] }
tokio-util = "0.7.18"
rand = "0.10.0"
hex = "0.4.3"
tower = { version = "0.5", features = ["util"] }
oxc_allocator = "0.116.0"
oxc_ast = "0.116.0"
oxc_ast_visit = "0.116.0"
oxc_parser = "0.116.0"
oxc_span = "0.116.0"
oxc_codegen = "0.116.0"
oxc_semantic = "0.116.0"
oxc_transformer = "0.116.0"
deno_core = "0.390.0"
deno_error = "0.7.0"
base64 = "0.22"
infer = "0.16"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp"] }
tiny-skia = "0.11"
multer = "3"
serde_urlencoded = "0.7"
sha1 = "0.10"
sha2 = "0.10"
sysinfo = { version = "0.32", default-features = false, features = ["system", "disk"] }
dirs-next = "2"
jsonwebtoken = "9"
bcrypt = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
sekejap = "0.8.15"
argon2 = { version = "0.5", features = ["std"] }
hmac = "0.12"
tokio-cron-scheduler = "0.15.1"
chrono = { version = "0.4.44", features = ["serde", "clock"] }
uuid = { version = "1.22.0", features = ["v4"] }
tempfile = "3"
flate2 = "1"
pdfwrangler = "0.1.4"
hound = "3.5"
geonative-core = "0.2"
geonative-convert = "0.2"
geonative-geoparquet = "0.2"
geonative-geojson = "0.2"
geonative-utils = "0.2"
geonative-tile = "0.2"
geodatafusion = "0.4.0"
datafusion = "53.1.0"
parquet = "58.3.0"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
