[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zebflow"
version = "0.5.0"
description = "Reactive web automation platform — pipelines, templates, and real-time collaboration in a single binary."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Zebflow", email = "hello@zebflow.com" }]
keywords = ["zebflow", "pipeline", "automation", "reactive", "web", "server", "wasm", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://zebflow.com"
Repository = "https://github.com/zebflow/zebflow"
Issues = "https://github.com/zebflow/zebflow/issues"

[project.scripts]
zebflow = "zebflow.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["zebflow"]
